ingress/ingress-ecol.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: ecollect-ingress
  namespace: ecollect
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecollect-svc
            port:
              number: 4430
      - path: /cbiapi
        pathType: Prefix
        backend:
          service:
            name: ecollectapis-svc
            port:
              number: 8000
      - path: /cbinodeapi
        pathType: Prefix
        backend:
          service:
            name: nodeapis-svc
            port:
              number: 6001
      - path: /cbinodeapi-v2
        pathType: Prefix
        backend:
          service:
            name: nodeapisv3-svc
            port:
              number: 3000
      - path: /cbicache
        pathType: Prefix
        backend:
          service:
            name: cacheapi-svc
            port:
              number: 5600
      - path: /cbiadlogin
        pathType: Prefix
        backend:
          service:
            name: adlogin-svc
            port:
              number: 6650
      - path: /cbimongorest
        pathType: Prefix
        backend:
          service:
            name: mongorest-svc
            port:
              number: 8501
      - path: /cbidemandemail
        pathType: Prefix
        backend:
          service:
            name: node-email-svc
            port:
              number: 8005
      - path: /cbidocx
        pathType: Prefix
        backend:
          service:
            name: docx-svc
            port:
              number: 8004
